fix(ui): make authentication icons visible in dark mode

--- a/weblate/static/style-dark.css
+++ b/weblate/static/style-dark.css
@@ -2942,3 +2942,7 @@ tbody.warning {
 .has-changes {
   border: 1px solid #dabc87 !important;
 }
+
+.auth-image {
+  filter: invert(90%) sepia(19%) saturate(258%) hue-rotate(316deg) brightness(108%) contrast(102%);
+}
